--- a/src/assets/styles/index.sass
+++ b/src/assets/styles/index.sass
@@ -1,3 +1,8 @@
+@import "~bootstrap/scss/bootstrap"
+
+@import "./Gameboard"
+@import "./Scoreboard"
+  
 body
   margin: 0
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
