--- a/src/assets/styles/_Gameboard.sass
+++ b/src/assets/styles/_Gameboard.sass
@@ -18,6 +18,7 @@
       width: 100%
       height: 100%
       background: white
+      cursor: pointer
 
       transition: transform 1s
       transform-style: preserve-3d
@@ -47,3 +48,4 @@
     .gamecard-body.flipped
       transform: rotateY(180deg)
       transition: transform 0.5s
+      cursor: auto
