--- a/src/assets/styles/Scoreboard.sass
+++ b/src/assets/styles/Scoreboard.sass
@@ -1,2 +1,11 @@
 .scoreboard
-  background: papayawhip
+  display: flex
+  justify-content: center
+
+  .scoreboard-score
+    padding: 15px 25px
+    display: flex
+    align-items: center
+
+    i
+      font-size: 1.5em
