Fix mobile sizing

--- a/src/assets/styles/_Gameboard.sass
+++ b/src/assets/styles/_Gameboard.sass
@@ -49,3 +49,13 @@
       transform: rotateY(180deg)
       transition: transform 0.5s
       cursor: auto
+
+  @media screen and (max-width: 768px)
+    .gamecard
+      flex: 1 0 30%
+      max-width: 160px
+
+  @media screen and (max-width: 1024px)
+    .gamecard
+      flex: 1 0 30%
+      max-width: 160px
